# simbuild-semantic-25

./: .gitignore  LICENSE  README.md  adding-normal-tags.py  app-completed.json  app-template.json  clean-workflow.ipynb  inferred_graph.ttl  main.py  nb.ipynb  nb.py  post-processed-model-normal.ttl  post-processed-model.ttl  pyproject.toml  query_output.json  temp.ttl
brick/: inlined_shapes.ttl  shapes.ttl
templates/: entities.yml  relations.yml  values.yml
